--- a/index.html
+++ b/index.html
@@ -64,6 +64,30 @@
             <div class="swiper-button-prev"></div>
             <div class="swiper-button-next"></div>
         </div>
+        <div class="card">
+            <!-- 1ª Linha-->
+            <div class="card__descricao">
+                <!-- 1ª Coluna-->
+                <div class="descricao">
+                    <h3 class="descricao__titulo">Talvez você também se interesse por...</h3>
+                    <h2 class="descricao__titulo-livro">Angular 11 e Firebase</h2>
+                    <p class="descricao__texto">Construindo uma aplicação integrada com a plataforma do Google.</p>
+                </div>
+                <!-- 2ª Coluna -->
+                <img src="img/Angular.svg" class="descricao__pagina">
+            </div>
+
+            <!-- 2ª Linha -->
+            <div class="card__botoes">
+                <!-- 1ª Coluna -->
+                <ul class="botoes">
+                    <li class="botoes__item"><img src="img/Favoritos.svg" alt="Favoritar Livro"></li>
+                    <li class="botoes__item"><img src="img/Compras.svg" alt="Adicionar ao carrinho de compras"></li>
+                </ul>
+                <!-- 2ª Coluna -->
+                <a href="#" class="botoes__ancora">Saiba Mais</a>
+            </div>
+        </div>
     </section>
     <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
     <script>
